{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 54,
  "lineage": "7cc82420-96b7-fd67-126e-ecd4fb62c912",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:internet-gateway/igw-006221f9de0c53557",
            "id": "igw-006221f9de0c53557",
            "owner_id": "616613574518",
            "tags": {
              "Name": "Quiz-4-SQL"
            },
            "tags_all": {
              "Name": "Quiz-4-SQL"
            },
            "vpc_id": "vpc-03ff040b4ea5ecb12"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:route-table/rtb-0f9fe44145584a88c",
            "id": "rtb-0f9fe44145584a88c",
            "owner_id": "616613574518",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006221f9de0c53557",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03ff040b4ea5ecb12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f41b416fde39858e",
            "route_table_id": "rtb-0f9fe44145584a88c",
            "subnet_id": "subnet-0f9c821eba5bcfbbf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.sql_subnet_1",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000d36bca5e2aeae3",
            "route_table_id": "rtb-0f9fe44145584a88c",
            "subnet_id": "subnet-0a1cc0c42f3629ac7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.sql_subnet_2",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sql_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:security-group/sg-097ead002472dc6b7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097ead002472dc6b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sql",
            "name_prefix": "",
            "owner_id": "616613574518",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03ff040b4ea5ecb12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sql_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:subnet/subnet-0f9c821eba5bcfbbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9c821eba5bcfbbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616613574518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sql-subnet-1"
            },
            "tags_all": {
              "Name": "sql-subnet-1"
            },
            "vpc_id": "vpc-03ff040b4ea5ecb12"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sql_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:subnet/subnet-0a1cc0c42f3629ac7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1cc0c42f3629ac7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616613574518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sql-subnet-2"
            },
            "tags_all": {
              "Name": "sql-subnet-2"
            },
            "vpc_id": "vpc-03ff040b4ea5ecb12"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:vpc/vpc-03ff040b4ea5ecb12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f31cf073c221078e",
            "default_route_table_id": "rtb-07694e02532b34d37",
            "default_security_group_id": "sg-06a402698708b8dd7",
            "dhcp_options_id": "dopt-04570ddac239d7c3e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ff040b4ea5ecb12",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07694e02532b34d37",
            "owner_id": "616613574518"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}